# simple-airports-analysis

./: .gitignore  Makefile  README.md  _config.yml  catalog.json  manifest.json  pyproject.toml  requirements.txt  run_results.json  tox.ini  workflow.py
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/docs/: catalog.json  manifest.json  run_results.json
dbt/macros/base/: cleaning_logic.sql
dbt/macros/core/: distance.sql
dbt/models/: overview.md
dbt/models/base/: base.yml  base_airports.sql
dbt/models/core/: core.yml  fct_airports__malaysia_distances_km.sql  fct_arrivals__malaysia_summary.sql
dbt/models/seeds/: seeds.yml
dbt/models/staging/: stg_airports.sql  stg_airports__malaysia_distances.sql  stg_arrivals__malaysia.sql
docs/: run_tasks_manually.md  visualising-luigi.md
extract_load/: airports.py  arrivals.py  config.yaml
extract_load/cred/: credentials.yaml
extract_load/util/: database.py  exceptions.py  tools.py  yaml_config.py
tests/workflow/: test_workflow.py
workflow/: workflow.py
